# CollatzViewer

./: CMakeLists.txt
include/: algorithm.h  graph.h  gui.h
src/: algorithm.cpp  graph.cpp  gui.cpp  main.cpp  test.cpp  testWindow.cpp
